--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <section>
     <h2>About Me</h2>
     <p>I am learning Git and GitHub. I enjoy building full-stack web applications using Java Spring Boot and React.js.</p>
+    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quidem officiis molestiae voluptatem cumque illum blanditiis fugiat facilis fugit, veritatis impedit adipisci laborum. Aliquam rem unde iste tempora nulla eligendi!</P>
   </section>
 
   <section>
