--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <h2>About Me</h2>
     <p>I am learning Git and GitHub. I enjoy building full-stack web applications using Java Spring Boot and React.js.</p>
     <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quidem officiis molestiae voluptatem cumque illum blanditiis fugiat facilis fugit, veritatis impedit adipisci laborum. Aliquam rem unde iste tempora nulla eligendi!</P>
-  </section>
+    <H6>New Version on new branch version</H6>
+</section>
 
   <section>
     <h2>Projects</h2>
